<resources>
    <string name="app_name">MobileCashService</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_changeUser">Change User</string>
    <string name="action_checkDatabase">Check Deposit</string>
    <string name="action_checkWithdraw">Check Withdrawal</string>

    <string name="tab_text_1">Location Records</string>
    <string name="tab_text_2">Add Location</string>

    <string name="action_logout">Log Out</string>
    <!-- Nan Fung's strings-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="error_name">Please enter name</string>
    <string name="error_phone">Please enter phone</string>
    <string name="error_email">Please enter email</string>
    <string name="error_pass">Please enter password</string>
    <string name="error_conpass">Please enter confirmpassword</string>
    <string name="error_ic">Please enter ic</string>
    <string name="error_invalid_email">Please enter a valid email</string>
    <!-- End of Nan Fung's strings-->

    <!-- Jia Wei's strings-->
    <string name="title_menu">Select amount to be deposit</string>
    <string name="title_area">Select area of transaction</string>
    <string name="title_activity_maps">Map</string>

    <!-- Kah Hou's strings
    <string name="app_name">Cash Request</string>-->
    <string name="cashWant">Cash （RM）</string>
    <string name="waitingTime">Wait Period (min)</string>
    <string-array name="cashOptions">
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
    </string-array>
    <string-array name="timeOptions">
        <item>5 mins</item>
        <item>10 mins</item>
        <item>15 mins</item>
        <item>20 mins</item>
    </string-array>
    <string name="request">Next</string>
    <string name="checkRequest">Cash Withdrawal History</string>
    <string name="selectTimeLocation">Wait Period and Location</string>
    <string name="selectLocation">Meeting Location</string>
    <string name="waiting">Please Wait</string>
    <string name="confirmCash">User Found</string>
    <string-array name="locationOptions">
        <item>Tunku Abdul Rahman University College</item>
        <item>Setapak Central</item>
        <item>Jalan Genting Klang</item>
    </string-array>
    <string name="QRconfirm">QR code</string>

    <!-- Strings related to ScanQRcode.java-->
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <string name="nav_home">Home</string>
    <string name="nav_myaccount">My Account</string>
    <string name="nav_deposit">Deposit</string>
    <string name="nav_withdrawal">Withdrawal</string>
    <string name="nav_wallet">Wallet</string>
    <string name="nav_creditcard">Credit Card</string>
    <string name="nav_title_mgmt">Management</string>
    <string name="nav_mgmt_menu">Management Menu</string>

    <string name="guideCash">Step 1: Choose Your Amount </string>
    <string name="guideCash2">Step 2: Choose Your Waiting Period (min) </string>
    <string name="meetingLocation">Step 3: Choose Your Meeting Location</string>

    <string name="go_dep">Click here to go Deposit ></string>
    <string name="go_wit">Click here to go Withdrawal ></string>
    <string name="welcome">Welcome !\nAccount Balance:</string>
    <string name="wait">Loading.... Please wait</string>

    <string name="title_selectcash">Select cash..</string>
    <string name="title_timelocation">Select Time and Location</string>
    <string name="title_matching">Matching...</string>
    <string name="title_forgetpassword">Forget Password</string>
    <string name="title_loginpage">Login Page</string>
    <string name="title_myaccount">My Account</string>
    <string name="title_register">Register your account</string>



    <string name="guideDep2">Step 1: Select Cash amount (RM) </string>
    <string name="guideDep1">Step 2: Choose Your Area </string>
    <string name="guideDep3">Step 3: Re-enter password</string>
    <string name="guideDep4">Step 4: Searching for user</string>
    <string name="guideDep5">Step 5: Scan QR Code to complete</string>
</resources>
